Add new advanced panel nav browser

--- a/setup.cfg
+++ b/setup.cfg
@@ -39,13 +39,13 @@ edit_on_github = False
 github_project = nmearl/baldr
 # install_requires should be formatted as a comma-separated list, e.g.:
 # install_requires = astropy, scipy, matplotlib
-install_requires = astropy
+install_requires = astropy, glue-core, ipyvuetify @ git+https://github.com/mariobuikhuizen/ipyvuetify.git, jupyter, glue-jupyter @ git+https://github.com/glue-viz/glue-jupyter.git
 # version should be PEP440 compatible (https://www.python.org/dev/peps/pep-0440/)
 version = 0.1.dev
 # Note: you will also need to change this in your package's __init__.py
 minimum_python_version = 3.7
 
 [entry_points]
-
+baldr = baldr.app:start
 # astropy-package-template-example = packagename.example_mod:main
 
